# agentweb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRODUCT.md  README.md  SECURITY.md  index.json  install.sh  install.sh.sha256  llms.txt  pyproject.toml  setup.py
.agents/skills/testing-agentweb-cli/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  oracle-drift.yml
docs/: AGENT_GUIDE.md  AGENT_HOSTS.md  ANALYTICS.md  ARCHITECTURE.md  BUILDING_ADAPTERS.md  README.md  SECURITY.md
installer/: install.sh.template
oracles/: arxiv.get_papers.oracle.json  npm.get_version.oracle.json  wikipedia.page.oracle.json
scripts/: build_installer.py  check_public_release.py
sites/amazon/0.9.24/: evidence.json
sites/bse/0.2.0/: authoring-report.json  manifest.json
sites/bse/0.3.1/: manifest.json
sites/coingecko/0.1.0/: authoring-report.json  manifest.json
sites/coingecko/0.2.0/: adapter.py  authoring-report.json  manifest.json
sites/coingecko/0.2.1/: manifest.json
sites/crossref/0.1.0/: authoring-report.json  manifest.json
sites/crossref/0.2.0/: adapter.py  manifest.json
sites/crossref/0.2.1/: authoring-report.json  manifest.json
sites/federalregister/0.1.0/: adapter.py  manifest.json
sites/federalregister/0.1.1/: authoring-report.json  manifest.json
sites/gst/0.1.2/: manifest.json
sites/hn/0.8.9/: evidence.json  manifest.json
sites/ibbi/0.2.0/: adapter.py  manifest.json
sites/ibbi/0.2.1/: authoring-report.json  manifest.json
sites/indiapost/0.1.0/: authoring-report.json  manifest.json
sites/indiapost/0.1.1/: adapter.py  authoring-report.json  manifest.json
sites/indiapost/0.1.2/: manifest.json
sites/mdn/0.1.0/: adapter.py  authoring-report.json  manifest.json
sites/mdn/0.2.0/: manifest.json
sites/mdn/0.2.1/: adapter.py  authoring-report.json  manifest.json
sites/nominatim/0.1.0/: manifest.json
sites/nominatim/0.1.1/: adapter.py  authoring-report.json  manifest.json
sites/npm/0.1.1/: adapter.py  authoring-report.json  manifest.json
sites/nse/0.2.0/: authoring-report.json  manifest.json
sites/nse/0.3.0/: authoring-report.json  manifest.json
sites/nse/0.3.1/: authoring-report.json  manifest.json
sites/nse/0.3.2/: adapter.py  manifest.json
sites/openbrewerydb/0.1.1/: adapter.py  manifest.json
sites/openbrewerydb/0.1.2/: authoring-report.json  manifest.json
sites/openlibrary/0.1.0/: authoring-report.json  manifest.json
sites/openlibrary/0.2.0/: authoring-report.json  manifest.json
sites/openlibrary/0.2.1/: authoring-report.json  manifest.json
sites/openlibrary/0.2.2/: adapter.py  manifest.json
sites/openmeteo/0.1.0/: adapter.py  authoring-report.json  manifest.json
sites/openmeteo/0.2.0/: manifest.json
sites/openmeteo/0.2.1/: adapter.py  authoring-report.json  manifest.json
sites/rbi/0.2.0/: authoring-report.json  manifest.json
sites/rbi/0.3.0/: adapter.py  manifest.json
sites/rbi/0.3.1/: authoring-report.json  manifest.json
sites/readthedocs/0.1.0/: adapter.py  authoring-report.json  manifest.json
sites/readthedocs/0.2.0/: authoring-report.json  manifest.json
sites/readthedocs/0.2.1/: manifest.json
sites/sebi/0.1.0/: adapter.py  authoring-report.json  manifest.json
sites/sebi/0.1.1/: manifest.json
sites/secedgar/0.1.0/: authoring-report.json  manifest.json
sites/secedgar/0.2.0/: adapter.py  authoring-report.json  manifest.json
sites/secedgar/0.2.1/: authoring-report.json  manifest.json
sites/secedgar/0.2.2/: manifest.json
sites/wikipedia/0.8.6/: evidence.json  manifest.json
sites/worldbank/0.1.0/: authoring-report.json  manifest.json
skills/agentweb/: SKILL.md
src/agentweb/: __init__.py  analytics.py  auth.py  browser_readback.py  capture.py  cli.py  connector.py  dashboard.py  logs.py  mcp.py  oracle.py  registry.py  runtime.py  scaffold.py  sdk.py  storage.py  targets.py  telemetry-defaults.json  updater.py  web_runtime.py
src/sitepack/: __init__.py
tests/: test_analytics.py  test_browser_readback.py  test_core.py  test_default_browser_login.py  test_docs.py  test_hosted_registry.py  test_npm_adapter.py  test_oracle.py  test_public_release.py  test_qa_remediation.py  test_reference_adapters_live.py  test_session_health.py  test_units.py  test_updater.py  test_web_runtime.py
(+269 files in other folders)
