[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agentweb-cli"
version = "0.19.3"
description = "Turn websites into fast, structured commands for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "AgentWeb contributors"}]
keywords = ["agents", "cli", "web", "automation", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "cryptography>=45",
  "curl-cffi>=0.15",
  "websocket-client>=1.8",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=9",
  "pytest-cov>=5",
  "ruff>=0.12",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/AnayGarodia/agentweb"
Documentation = "https://github.com/AnayGarodia/agentweb#readme"
Issues = "https://github.com/AnayGarodia/agentweb/issues"

[project.scripts]
agentweb = "agentweb.cli:main"
sitepack = "agentweb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentweb = [
  "builtin_registry/**/*.json",
  "builtin_registry/**/*.py",
  "dashboard/*.html",
  "telemetry-defaults.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live: hits real production websites; requires AGENTWEB_LIVE_TESTS=1",
  "browser: launches a real managed Chrome/Chromium; skipped without one",
]

[tool.ruff]
target-version = "py311"
line-length = 88
# Released adapter snapshots are immutable registry artifacts whose bytes are
# hashed; never rewrite them with lint fixes.
extend-exclude = ["src/agentweb/builtin_registry"]

[tool.ruff.lint]
# Default rules (E/F) plus import sorting, pyupgrade, comprehension, and misc
# hygiene rules that are safe, behaviour-preserving auto-fixes.
select = ["E4", "E7", "E9", "F", "I", "UP", "C4", "PIE"]

[tool.ruff.lint.per-file-ignores]
# Released adapter snapshots are immutable registry artifacts; keep their hashes stable.
"src/agentweb/builtin_registry/sites/**/adapter.py" = ["F401", "F841"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
files = ["src/agentweb"]
exclude = ["src/agentweb/builtin_registry"]

[tool.coverage.run]
source = ["agentweb"]
omit = ["*/builtin_registry/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
